--- a/resources/styles/navbarstyle.css
+++ b/resources/styles/navbarstyle.css
@@ -131,7 +131,7 @@ nav a:hover {
   align-items: center;
   font-size: 18px;
   cursor: pointer;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
   transition: opacity 0.3s ease, transform 0.3s ease;
 }
 
